--- a/assets/scss/blocks/_consultation-block.scss
+++ b/assets/scss/blocks/_consultation-block.scss
@@ -14,6 +14,29 @@
   }
 }
 
+.help-with__woman__name {
+  display: none;
+  font-size: 20px;
+  line-height: 30px;
+  text-align: center;
+
+  @media (max-width: 1250px) {
+    display: inherit;
+  }
+}
+
+.help-with__woman__position {
+  @media (max-width: 1250px) {
+    display: inherit;
+  }
+
+  display: none;
+  font-size: 12px;
+  line-height: 14px;
+  text-align: center;
+  margin-bottom: 29px;
+}
+
 .help-with__content {
   padding-top: 30px;
 }
