--- a/assets/scss/blocks/_history-success.scss
+++ b/assets/scss/blocks/_history-success.scss
@@ -351,9 +351,8 @@
   bottom: -20px;
 
   @media (max-width: 1250px) {
-    width: 221.03px;
     font-size: 20px;
-    line-height: 23px;
+    padding: 12px 48px;
   }
 }
 
