--- a/assets/scss/blocks/_mobile-menu.scss
+++ b/assets/scss/blocks/_mobile-menu.scss
@@ -2,12 +2,85 @@
   position: fixed;
   width: 100%;
   height: 100vh;
-  background: #958578;
-  z-index: 8888;
+  z-index: 99999;
   top: 0;
   left: 0;
+  transition: 0.4s;
+  transform: translateX(0%);
 
   &.not-visible {
-    display: none;
+    transform: translateX(100%);
   }
+}
+
+.mobile-menu {
+
+}
+
+.not-visible {
+}
+
+.menu-body {
+  height: 100vh;
+  width: 100%;
+  position: relative;
+  z-index: 10;
+}
+
+.menu-content {
+  background: #F9E4B0;
+  width: 80%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 100vh;
+  z-index: 999;
+  padding: 0 38px;
+}
+
+.mobile-menu__header {
+  padding: 25px 0;
+}
+
+.mobile-menu__header__logo {
+
+}
+
+.mobile-menu__main {
+  padding-top: 25px;
+}
+
+.mobile-menu__nav {
+  li {
+    margin-bottom: 20px;
+  }
+}
+
+.mobile-menu-nav__item {
+  @include link-reset;
+  text-transform: uppercase;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 21px;
+}
+
+.mobile-menu__social-icons {
+  display: flex;
+  gap: 20px;
+  margin-top: 30px;
+
+  li {
+    //a {
+    //  img {
+    //    width: 42px;
+    //    height: 42px;
+    //  }
+    //}
+  }
+}
+
+.menu-content__dec-logo {
+  position: absolute;
+  top: 0;
+  right: 0;
 }
