--- a/assets/scss/templates/_footer.scss
+++ b/assets/scss/templates/_footer.scss
@@ -25,12 +25,37 @@
 .footer-requisites {
   user-select: text;
   margin-bottom: 172px;
+
+  p {
+    text-transform: uppercase;
+  }
+
+  @media (max-width: 1250px) {
+    margin-bottom: 0;
+    p {
+      font-size: 15px;
+      line-height: 121.4%;
+    }
+  }
 }
 
 .terms-link {
   color: #FFF;
   text-decoration: none;
   display: block;
+  text-align: left;
+
+  @media (max-width: 1250px) {
+    font-size: 15px;
+    line-height: 132.9%;
+  }
+}
+
+.mobile-row {
+  @media (max-width: 1250px) {
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
 .footer__nav-list {
@@ -41,6 +66,15 @@
   }
 
   margin-bottom: 59px;
+
+  @media (max-width: 1250px) {
+    text-align: left;
+
+    li {
+      text-align: left;
+    }
+
+  }
 }
 
 .footer__nav-list__item {
@@ -53,18 +87,34 @@
   text-transform: uppercase;
   @include link-reset;
   color: #FFF;
+
+  @media (max-width: 1250px) {
+    font-size: 20px;
+    line-height: 155.9%;
+
+  }
 }
 
 .footer__social-icons{
   display: flex;
   gap: 15px;
   justify-content: flex-end;
+
+  @media (max-width: 1250px) {
+    gap: 0px;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
 }
 
 .footer-phone {
   text-align: right;
   @include link-reset;
   color: #FFFFFF;
+
+  @media (max-width: 1250px) {
+    margin-top: 30px;
+  }
 }
 
 .col--right {
