--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -800,6 +800,20 @@ header, main, footer {
   align-items: center;
   display: flex;
 }
+@media (max-width: 1250px) {
+  .header-content__course__price-box {
+    margin-top: 100px;
+    background: #F7EFE9;
+    border: 1px solid #958578;
+    border-radius: 23px;
+    position: relative;
+    width: 212px;
+    height: 78px;
+  }
+  .header-content__course__price-box__wrapper {
+    display: block;
+  }
+}
 
 .header-content__course__price-box__btn {
   text-decoration: none;
@@ -827,6 +841,13 @@ header, main, footer {
     display: block;
   }
 }
+@media (max-width: 1250px) {
+  .header-content__course__price-box__btn {
+    position: absolute;
+    width: 212px;
+    top: -23px;
+  }
+}
 
 .header-content__course__price-box__subtitle {
   font-family: "Kudryashev Headline";
@@ -837,6 +858,16 @@ header, main, footer {
   text-align: center;
   color: #958578;
   padding: 3px 36px 7px 50px;
+}
+@media (max-width: 1250px) {
+  .header-content__course__price-box__subtitle {
+    margin-top: 40px;
+    font-size: 20px;
+    line-height: 127.4%;
+    font-weight: 600;
+    padding: 0;
+    text-align: center;
+  }
 }
 
 .header-content__course__title {
@@ -1787,6 +1818,12 @@ header, main, footer {
   background: url(../../assets/img/background/home/3.jpg);
   width: 100%;
 }
+@media (max-width: 1250px) {
+  .reviews-background {
+    background: none;
+    min-height: 0;
+  }
+}
 
 .webinars-advantage {
   background: #958578;
@@ -2140,12 +2177,24 @@ header, main, footer {
   overflow: hidden;
   padding-bottom: 140px;
 }
+@media (max-width: 1250px) {
+  .for-whom__box {
+    padding-bottom: 70px;
+    margin-top: 15px;
+  }
+}
 
 .for-whom__box__person {
   display: flex;
   gap: 22px;
   align-items: center;
   margin-bottom: 16px;
+}
+@media (max-width: 1250px) {
+  .for-whom__box__person p {
+    font-size: 15px;
+    line-height: 20px;
+  }
 }
 
 .for-whom__box__person__img {
@@ -2206,6 +2255,11 @@ header, main, footer {
   gap: 35px;
   margin-bottom: 60px;
 }
+@media (max-width: 1250px) {
+  .results-webinar__cards {
+    gap: 15px;
+  }
+}
 
 .results-webinar__card {
   background: #FFFFFF;
@@ -2234,9 +2288,23 @@ header, main, footer {
   transform: translateY(-50%);
   left: -20px;
 }
+@media (max-width: 1250px) {
+  .results-webinar__card {
+    font-size: 15px;
+    line-height: 17px;
+    padding: 16px 42px;
+    max-height: 70px;
+  }
+}
 
 .webinar-program__text-block {
   margin: 0 auto 110px auto;
+}
+@media (max-width: 1250px) {
+  .webinar-program__text-block {
+    font-size: 15px;
+    line-height: 17px;
+  }
 }
 
 .results-webinar__form {
@@ -2256,6 +2324,19 @@ header, main, footer {
   z-index: -1;
   right: -200px;
   top: -116px;
+  background-size: cover;
+}
+@media (max-width: 1250px) {
+  .results-webinar__form {
+    background: #FFF5E9;
+    padding: 27px 21px 46px 18px;
+  }
+  .results-webinar__form::before {
+    width: 236px;
+    height: 132px;
+    top: -86px;
+    right: 0;
+  }
 }
 
 .form-container {
@@ -2272,12 +2353,24 @@ header, main, footer {
 .results-webinar__form__title span {
   color: #000;
 }
+@media (max-width: 1250px) {
+  .results-webinar__form__title {
+    font-size: 20px;
+    line-height: 30px;
+    max-width: 291px;
+  }
+}
 
 .results-webinar__form__inputs {
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
   margin-bottom: 26px;
+}
+@media (max-width: 1250px) {
+  .results-webinar__form__inputs {
+    gap: 10px;
+  }
 }
 
 .results-webinar__form__input {
@@ -2290,6 +2383,13 @@ header, main, footer {
   font-size: 18px;
   line-height: 21px;
   color: #808080;
+}
+@media (max-width: 1250px) {
+  .results-webinar__form__input {
+    width: 100%;
+    font-size: 15px;
+    line-height: 17px;
+  }
 }
 
 .results-webinar__form__inputs__submit {
@@ -2322,6 +2422,18 @@ header, main, footer {
     line-height: 18px;
     padding: 17px 13px;
     display: block;
+  }
+}
+@media (max-width: 1250px) {
+  .results-webinar__form__inputs__submit {
+    width: 300px;
+  }
+}
+
+@media (max-width: 1250px) {
+  .form-pol {
+    font-size: 15px;
+    line-height: 17px;
   }
 }
 
@@ -2704,11 +2816,11 @@ header, main, footer {
   right: 0;
   height: 100vh;
   z-index: 999;
-  padding: 0 38px;
+  padding: 0 25px;
 }
 
 .mobile-menu__header {
-  padding: 25px 0;
+  padding: 38px 0;
 }
 
 .mobile-menu__main {
