--- a/assets/scss/blocks/_results-webinar.scss
+++ b/assets/scss/blocks/_results-webinar.scss
@@ -13,6 +13,10 @@
   justify-content:  center;
   gap: 35px;
   margin-bottom: 60px;
+
+  @media (max-width: 1250px) {
+    gap: 15px;
+  }
 }
 
 .results-webinar__card {
@@ -42,10 +46,22 @@
     transform: translateY(-50%);
     left: -20px;
   }
+
+  @media (max-width: 1250px) {
+    font-size: 15px;
+    line-height: 17px;
+    padding: 16px 42px;
+    max-height: 70px;
+  }
 }
 
 .webinar-program__text-block {
   margin: 0 auto 110px auto;
+
+  @media (max-width: 1250px) {
+    font-size: 15px;
+    line-height: 17px;
+  }
 }
 
 .results-webinar__form {
@@ -58,6 +74,7 @@
     z-index: -1;
     right: -200px;
     top: -116px;
+    background-size: cover;
   }
 
   background: #FFFFFF;
@@ -66,6 +83,18 @@
   border-radius: 37px;
   padding: 60px 0 74px 0;
   position: relative;
+
+  @media (max-width: 1250px) {
+    background: #FFF5E9;
+    padding: 27px 21px 46px 18px;
+
+    &::before {
+      width: 236px;
+      height: 132px;
+      top: -86px;
+      right: 0;
+    }
+  }
 }
 
 .form-container {
@@ -83,6 +112,12 @@
   span {
     color: #000;
   }
+
+  @media (max-width: 1250px) {
+    font-size: 20px;
+    line-height: 30px;
+    max-width: 291px;
+  }
 }
 
 .results-webinar__form__inputs {
@@ -90,6 +125,10 @@
   flex-wrap: wrap;
   gap: 20px;
   margin-bottom: 26px;
+
+  @media (max-width: 1250px) {
+    gap: 10px;
+  }
 }
 
 .results-webinar__form__input {
@@ -103,6 +142,12 @@
   line-height: 21px;
 
   color: #808080;
+
+  @media (max-width: 1250px) {
+    width: 100%;
+    font-size: 15px;
+    line-height: 17px;
+  }
 }
 
 .results-webinar__form__inputs__submit {
@@ -117,5 +162,15 @@
   width: 479px;
   cursor: pointer;
   padding: 18.5px 48px;
+
+  @media (max-width: 1250px) {
+    width: 300px;
+  }
 }
 
+.form-pol {
+  @media (max-width: 1250px) {
+    font-size: 15px;
+    line-height: 17px;
+  }
+}
