--- a/assets/scss/blocks/_company-achievements.scss
+++ b/assets/scss/blocks/_company-achievements.scss
@@ -57,7 +57,7 @@
   @media (max-width: 1250px) {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    //justify-content: space-between;
     gap: 15px;
   }
 }
