--- a/assets/scss/blocks/_person-consultation.scss
+++ b/assets/scss/blocks/_person-consultation.scss
@@ -5,11 +5,23 @@
 .person-consultation__title {
   font-size: 27px;
   line-height: 41px;
+
+  @media (max-width: 1250px) {
+    font-size: 20px;
+    line-height: 30px;
+  }
 }
 
 .person-consultation__subtitle {
   color: #958578;
   margin-bottom: 50px;
+
+  @media (max-width: 1250px) {
+    font-size: 15px;
+    line-height: 115%;
+    margin-top: 5px;
+    margin-bottom: 20px;
+  }
 }
 
 .person-consultation__cards {
@@ -23,6 +35,10 @@
   flex-wrap: wrap;
   justify-content: center;
   gap: 118px;
+
+  @media (max-width: 1250px) {
+    gap: 40px;
+  }
 }
 
 .results-consultation {
@@ -35,6 +51,12 @@
   font-size: 27px;
   line-height: 41px;
   margin-bottom: 40px;
+
+  @media (max-width: 1250px) {
+    font-size: 20px;
+    line-height: 30px;
+    text-align: center;
+  }
 }
 
 .results-consultation__list {
@@ -61,6 +83,22 @@
       left: -4px;
       top: 50%;
       transform: translateY(-50%);
+      background-size: cover;
+    }
+  }
+
+  @media (max-width: 1250px) {
+    column-count: 1;
+
+    li {
+      font-size: 13px;
+      line-height: 125%;
+      padding-left: 30px;
+
+      &::before {
+        width: 21px;
+        height: 21px;
+      }
     }
   }
 }
@@ -76,11 +114,33 @@
   padding: 50px 33px 62px 20px;
   position: relative;
   z-index: 10;
+  margin-bottom: 190px;
+
+  @media (max-width: 1250px) {
+    display: block;
+    position: relative;
+    padding: 100px 17px 75px 17px;
+    margin-bottom: 0;
+  }
 }
 
 .person-consultation__box__img {
   max-width: 267px;
   max-height: 267px;
+
+  @media (max-width: 1250px) {
+    border-radius: 50%;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: -80px;
+
+    img {
+      border-radius: 50%;
+      width: 167.8px;
+      height: 167.8px;
+    }
+  }
 }
 
 .person-consultation__box__content {
@@ -92,6 +152,13 @@
   color: #958578;
   margin-bottom: 50px;
   line-height: 136%;
+
+  @media (max-width: 1250px) {
+    font-size: 20px;
+    line-height: 136%;
+    margin-bottom: 35px;
+    text-align: center;
+  }
 }
 
 .person-consultation__box__content__text {
@@ -99,6 +166,11 @@
 
   span {
     font-weight: 600;
+  }
+
+  @media (max-width: 1250px) {
+    font-size: 15px;
+    line-height: 17px;
   }
 }
 
@@ -109,4 +181,11 @@
   right: 100px;
   bottom: -29px;
   width: 479px;
+
+  @media (max-width: 1250px) {
+    width: 328px;
+    right: 0;
+    left: 50%;
+    transform: translateX(-50%);
+  }
 }
