--- a/assets/scss/blocks/_conditions-consultation.scss
+++ b/assets/scss/blocks/_conditions-consultation.scss
@@ -5,9 +5,14 @@
 .conditions-consultation__cards {
   margin: 25px 0 80px 0;
   display: flex;
-  justify-content: center;
+  //justify-content: center;
   flex-wrap: wrap;
   gap: 12px;
+
+  @media (max-width: 1250px) {
+    margin-top: 35px;
+    gap: 35px;
+  }
 }
 
 .conditions-consultation__card {
@@ -29,6 +34,10 @@
     bottom: -23px;
     left: 50%;
     transform: translateX(-50%);
+  }
+
+  @media (max-width: 1250px) {
+    background: #F4E7DD;
   }
 }
 
@@ -68,6 +77,28 @@
       }
     }
   }
+
+  @media (max-width: 1250px) {
+    p {
+      font-size: 15px;
+      line-height: 17px;
+
+      &.line-row {
+        display: none;
+      }
+
+
+      &::before {
+        content: '';
+        position: absolute;
+        width: 310px;
+        height: 1px;
+        bottom: -20px;
+        background: #958578;
+      }
+
+    }
+  }
 }
 
 .conditions-consultation__list {
@@ -76,4 +107,9 @@
   }
   list-style: disc;
   list-style-position: inside;
+
+  @media (max-width: 1250px) {
+    font-size: 12px;
+    line-height: 14px;
+  }
 }
