--- a/assets/scss/blocks/_header-content.scss
+++ b/assets/scss/blocks/_header-content.scss
@@ -156,13 +156,22 @@
 .header-content__consultation__row {
   display: flex;
   justify-content: space-between;
+
+  @media (max-width: 1250px) {
+    display: block;
+  }
 }
 
 .header-content__consultation__row__box_1 {
   padding-top: 50px;
 }
 
-.header-content__consultation__row__box_2 {
+.header-content__consultation__row__expert {
+  @media (max-width: 1250px) {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: flex-end;
+  }
 }
 
 .header-content__consultation__img {
@@ -172,15 +181,70 @@
   img {
     width: 100%;
   }
+
+  @media (max-width: 1250px) {
+    position: relative;
+    right: -30px;
+  }
 }
 
 .header-content__consultation__btn {
   @include link-reset;
   @include gold-btn;
+
+  @media (max-width: 1250px) {
+    margin-top: 42px;
+  }
+}
+
+.header-content__consultation__about {
+  font-size: 15px;
+  line-height: 150.4%;
+  margin-top: 45px;
+  margin-bottom: 7px;
+}
+
+.mobile-active {
+}
+
+.header-content__consultation__about-list {
+  list-style-position: inside;
+  padding-left: 15px;
+  li {
+    color: $color_1;
+    position: relative;
+
+    &::before {
+      content: '';
+      position: absolute;
+      height: 1px;
+      width: 5px;
+      background: #000;
+      left: -10px;
+      top: 12px;
+    }
+  }
+}
+
+.header-content__consultation__title {
+  @media(max-width: 1250px) {
+    font-size: 20px;
+    line-height: 139.9%;
+    padding: 25px;
+    background: #F7EFE9;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+    border-radius: 20px;
+  }
 }
 
 .header-content__consultation__subtitle {
-  margin: 55px 0 200px 0;
+  margin: 55px 0 0 0;
+
+  @media (max-width: 1250px) {
+    &.m-none {
+      display: none;
+    }
+  }
 }
 
 .header-content__course__price-box {
