--- a/assets/scss/templates/_header.scss
+++ b/assets/scss/templates/_header.scss
@@ -17,6 +17,10 @@
     height: 440px;
     width: 100%;
     background: url("../../assets/img/background/home/1.jpg");
+
+    @media (max-width: 1250px) {
+      height: 340px;
+    }
   }
 }
 
