--- a/assets/scss/blocks/_conditions-consultation.scss
+++ b/assets/scss/blocks/_conditions-consultation.scss
@@ -12,6 +12,13 @@
   @media (max-width: 1250px) {
     margin-top: 35px;
     gap: 35px;
+    justify-content: center;
+  }
+}
+
+.conditions-consultation__title {
+  @media (max-width: 1250px) {
+    text-align: center;
   }
 }
 
@@ -38,6 +45,9 @@
 
   @media (max-width: 1250px) {
     background: #F4E7DD;
+    width: 297px;
+    font-size: 15px;
+    line-height: 17px;
   }
 }
 
