--- a/assets/scss/blocks/_contacts-block.scss
+++ b/assets/scss/blocks/_contacts-block.scss
@@ -1,6 +1,10 @@
 .contacts-block {
   padding: 150px 0 64px 0;
   position: relative;
+
+  @media (max-width: 1250px) {
+    padding: 30px 0 100px 0;
+  }
 }
 
 .contacts-block__container {
@@ -11,29 +15,53 @@
 
 .contacts-block__text {
   margin-left: 20%;
+
+  @media (max-width: 1250px) {
+    margin: 0;
+  }
 }
 
 .contacts-block__title {
   font-size: 27px;
   line-height: 41px;
+
+  @media (max-width: 1250px) {
+    font-size: 20px;
+    line-height: 139.9%;
+  }
 }
 
 .contacts-block__subtitle {
   font-size: 25px;
   line-height: 118.4%;
   margin-bottom: 42px;
+
+  @media (max-width: 1250px) {
+    font-size: 15px;
+    line-height: 118.4%;
+    margin-bottom: 25px;
+  }
 }
 
-.map-responsive{
-  overflow:hidden;
-  padding-bottom:34.25%;
-  position:relative;
-  height:0;
-}
+//.map-responsive{
+//  overflow:hidden;
+//  padding-bottom:34.25%;
+//  position:relative;
+//  height:0;
+//
+//  @media (max-width: 1250px) {
+//    padding-bottom: 84.25%;
+//  }
+//}
 .map-responsive iframe{
   left:0;
   top:0;
   height:545px;
   width:100%;
-  position:absolute;
+  //position:absolute;
+
+  @media (max-width: 1250px) {
+    height: 400px;
+    border-radius: 20px;
+  }
 }
